# MaaGakumasu

./: .gitignore  AGENTS.md  README.md  config.jsonc  install.py  maatools.config.mts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: cliff.toml
.github/ISSUE_TEMPLATE/: cn-bug-report.yaml
.github/workflows/: check.yml  install.yml  mirrorchyan.yml  mirrorchyan_release_note.yml
.nicegui/: storage-general.json
agent/: main.py
agent/custom/: __init__.py
agent/custom/action/: Counter.py  SupportCards.py  __init__.py  challenge.py  gakumas_data.py  produce.py  produce_llm.py  shop.py  skill_cards.py  work.py
agent/custom/reco/: README.md  __init__.py  produce.py  society.py  utils.py  work.py
agent/utils/: logger.py
assets/: interface.json
assets/data/: idols_cards.json  produce_skill_cards.json  support_cards.json
assets/lang/: zh-CN.json  zh-Hant.json
assets/resource/: Announcement.md  Changelog.md
assets/resource/DMM/pipeline/: StartUp.json
assets/resource/base/pipeline/: ActivityFees.json  Award.json  Challenge.json  (+13 more)
assets/tasks/: preset.json  produce.json  produce_cn.json  shopping.json  shutdown.json
docs/zh_cn/: 功能说明.md  开发相关.md  提问与反馈指南.md
tests/: test_produce_llm.py  test_skill_cards.py  test_update_skill_card_templates.py  test_update_skill_cards.py
tools/: handle_idols.py  image_cropper.py  install.py  interface.schema.json  interface_config.schema.json  pipeline.schema.json  sync_cards.py  sync_lang.py  sync_support_cards.py  update_cards.py  update_skill_card_templates.py  update_skill_cards.py
(+9 files in other folders)
